Thu Feb 19 02:30:34 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/strscan/strscan.c: documentation checked.

Thu Feb 19 00:11:05 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/markup/simple_markup/preprocess.rb (SM::PreProcess::handle): 
	  Strip extraneous space from filenames in :include:

Wed Feb 18 22:52:00 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/unix.rb: remove O_NONBLOCK, thanks \ay

Wed Feb 18 22:47:00 2004  Gavin Sinclair <gsinclair@soyabean.com.au>

	* ext/strscan/strscan.c: documented

Wed Feb 18 22:03:11 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/*: should not depend on $KCODE.

Wed Feb 18 17:18:01 2004  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/win32ole/win32ole.c: need to include <olectl.h> on Cygwin.

Tue Feb 17 23:28:45 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>

	* test/ruby/marshaltestlib.rb: common marshal testcase added.

	* test/ruby/test_marshal.rb: use above testsuite.

	* test/soap/marshal/test_marshal.rb: ditto.

	* test/soap/marshal/cmarshal.rb: removed (not used).

Tue Feb 17 10:51:23 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/syck/rubyext.c (syck_emitter_end_object): takes only one arg.

Tue Feb 17 01:35:28 2004  Tanaka Akira  <akr@m17n.org>

	* eval.c (rb_eval): care that another thread replace NODE_DREGX_ONCE
	  to NODE_LIT.  [ruby-dev:22920]

Tue Feb 17 01:24:35 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: backport from 1.9 - configure. (Thanks Nakada)
	  [ruby-dev:22910]

	* win32/Makefile.sub: ditto.

	* wince/Makefile.sub: ditto.

Tue Feb 17 00:38:10 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/rinda/tuplespace.rb: TupleSpace#initialize, stop doubling timeout

Tue Feb 17 00:18:03 2004  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb: import test_rinda.rb

Tue Feb 17 00:14:30 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* bcc32/Makefile.sub: avoid warning "Redefinition of macro